# DatasetPlus

./: .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml  requirements.txt  setup.cfg  setup.py
datasetplus/: __init__.py  audio.py  core.py
datasetplus/audio_aes/: cli.py  infer.py
datasetplus/audiobox-aesthetics/: infer.py
datasetplus/audiobox-aesthetics/model/: aes.py  utils.py  wavlm.py
datasetplus/audiobox_aesthetics/: cli.py  utils.py
datasetplus/pipelines/: aes_pipeline.py
datasetplus/tools/audiobox_aesthetics/: infer.py
datasetplus/tools/audiobox_aesthetics/model/: aes.py
datasetplus/utils/: __init__.py  huggingface.py  logger.py
examples/: audio_aesthetics_examples.py  download_dataset.py  process_audio_data.py
