[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "datasetplus"
version = "0.1.0"
description = "Enhanced dataset management utilities for Hugging Face Hub"
authors = ["Kadir Nar <kadir.nar@gmail.com>"]
maintainers = ["Kadir Nar <kadir.nar@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/kadirnar/datasetplus"
repository = "https://github.com/kadirnar/datasetplus"
documentation = "https://github.com/kadirnar/datasetplus"
keywords = ["dataset", "huggingface", "audio", "machine learning"]
packages = [
    { include = "datasetplus" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.ruff]
line-length = 100
target-version = "py39"

# Enable Pyflakes `F` and `E`, `W` series
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "T20", "RET", "SIM", "D"]
ignore = [
    "D203",  # one-blank-line-before-class
    "D213",  # multi-line-summary-second-line
]

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
huggingface-hub = ">=0.19.0"
tqdm = ">=4.65.0"
polars = ">=0.20.1"
colorlog = ">=6.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
mypy = "^1.7.1"
ruff = "^0.1.8"
pre-commit = "^3.6.0"
