[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datasetplus"
version = "0.1.0"
description = "Enhanced dataset management utilities for the Hugging Face Hub"
authors = [{name = "Kadir Nar", email = "kadir.nar@hotmail.com"}]
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9,<4.0"
dependencies = [
    "huggingface-hub>=0.19.0",
    "polars>=0.19.12",
    "colorlog>=6.7.0",
    "tqdm>=4.66.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "mypy>=1.7.1",
    "ruff>=0.1.8",
    "pre-commit>=3.5.0",
    "types-requests>=2.31.0.10",
    "types-setuptools>=69.0.0.0",
    "types-tqdm>=4.66.0.2",
]

[project.urls]
Homepage = "https://github.com/kadirnar/datasetplus"
Repository = "https://github.com/kadirnar/datasetplus"
Documentation = "https://github.com/kadirnar/datasetplus"

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "T20", "RET", "SIM", "D"]
ignore = [
    "D203",  # one-blank-line-before-class
    "D213",  # multi-line-summary-second-line
]

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true
